# Volkenborn-Stream-CIpher

./: .gitignore  Cargo.toml  README.md  SECURITY.txt
.github/workflows/: ci.yml
src/: bench.rs  donna_poly1305.rs  fuzz.rs  lib.rs  main.rs
tests/: random_crosscheck.rs
tools/: sanitize.ps1  sanitize.sh
tools/analysis/: avalanche.py  reduced_model.py  run_dieharder.sh  run_testu01.sh  smt_export.py  testu01_stdin_adapter.c
tools/audit/: dudect_smoke.c  inspect_assembly.sh
tools/fuzz/: c_fuzz_harness.c  run_c_fuzz.sh
